--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/P_TestMap.P_TestMap
 GameDefaultMap=/Game/Maps/P_TestMap.P_TestMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -109,5 +110,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="FleshDefault")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="FleshVulnerable")
-
 
